<resources>
    <string name="app_name">GSHindi</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_submit">Submit</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="emailpassword_title_text">Enter User Details</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign out</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_email">Enter Email</string>
    <string name="loading">Loading</string>
    <string name="emailpassword_status_fmt">Email password status fmt</string>
    <string name="firebase_status_fmt">Firebase status fmt</string>
    <string name="signed_out">Signed Out</string>
    <string name="option_1">option1</string>
    <string name="option_2">option2</string>
    <string name="option_3">option3</string>
    <string name="option_4">option4</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="result_review">Review</string>
    <string name="home_page">Home</string>
    <string name="commit_test">End Test</string>
    <string name="total_question">Total Question</string>
    <string name="login_link">Existing Users</string>
    <string name="new_users_link">New Users</string>
    <string name="your_answer">Your Answer</string>
    <string name="gs_hindi">GS Hindi</string>
</resources>
