<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textSize="24sp"
    tools:context="com.gshindi.android.testfirebase.WelcomeActivity">

    <TextView
        android:id="@+id/gs_hindi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/gs_hindi"/>

    <TextView
        android:id="@+id/existing_users_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_above="@+id/new_users_link"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/login_link"/>

    <TextView
        android:id="@+id/new_users_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/new_users_link"/>

</RelativeLayout>
